// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Link Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <a
    className="link color-primary"
  >
    <div
      className="paragraph color-primary size-md weight-medium"
    >
      Mouths Muil
    </div>
  </a>
  <a
    className="link color-tertiary"
  >
    <div
      className="paragraph color-tertiary size-md weight-medium"
    >
      Mouths Muil
    </div>
  </a>
</div>
`;

exports[`Storyshots Atoms/Link Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <a
    className="link color-primary"
  >
    <div
      className="paragraph color-primary size-md weight-medium"
    >
      Mouths Muil
    </div>
  </a>
</div>
`;
